syntax = "proto3";

package generator;

option go_package = "./internal/generator/grpc;generator";

service GeneratorService {
  rpc GetAllListGenerated(AllListGeneratedRequest) returns (ListGeneratedPdf);
  rpc GetListGenerated(GeneratedRequest) returns (ListGeneratedPdf);
  rpc GetGeneratedPDF(GeneratedPDFRequest) returns (GeneratedPdf);
  rpc DeleteGenerated(GeneratedPDFRequest) returns (DeleteGeneratedResponse);
  rpc GetPDFLink(GeneratedPDFRequest) returns (PDFLink);
}

message AllListGeneratedRequest {
  string user_id = 1;
}

message GeneratedRequest {
  string user_id = 1;
  string cv_id = 2;
}

message GeneratedPDFRequest {
  string id = 1;
  string user_id = 2;
  string cv_id = 3;
}

message ListGeneratedPdf {
  repeated GeneratedPdf pdfs = 1;
}

message GeneratedPdf {
  string id = 1;
  string cv_id = 2;
  string user_id = 3;
  string title = 4;
  optional bytes pdf_file = 5;
  optional string pdf_url = 6;
  string status = 7;
  string created_at = 8;
  string updated_at = 9;
}

message PDFLink {
  string id = 1;
  string title = 2;
  optional bytes pdf_file = 3;
  optional string pdf_url = 4;
}

message DeleteGeneratedResponse {
  bool success = 1;
}